--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: ruby/setup-ruby@v1
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.2'
     - name: Setup cache for Bundler
@@ -41,7 +42,7 @@ jobs:
 
     - name: Update Algolia index
       working-directory: docs/
-      run: bundle exec jekyll algolia push
+      run: bundle exec jekyll build algolia push
       env:
         ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
       continue-on-error: true
