--- a/_config.yml
+++ b/_config.yml
@@ -178,6 +178,7 @@ exclude:
   - assets/js/vendor
   - Capfile
   - CHANGELOG
+  - CHANGELOG.md
   - config
   - Gemfile
   - Gruntfile.js
@@ -189,9 +190,16 @@ exclude:
   - package-lock.json
   - Rakefile
   - README
+  - README.md
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
+  - "*.gemspec" # ignore theme gemspec files
+  - screenshot.png # ignore theme screenshots
+  - screenshot-layouts.png # ignore theme screenshots
+  - staticman.yml # ignore theme files
+  - .travis.yml # ignore CI files
+  - .editorconfig # ignore editor config
 keep_files:
   - .git
   - .svn
